# wasmrepl

./: Cargo.toml  Features.md  Readme.md  todo.md
src/: analyzer.rs  call_stack.rs  call_stack_test.rs  dict.rs  elements.rs  executor.rs  executor_test.rs  float.rs  group.rs  handler.rs  handler_test.rs  integer.rs  list.rs  locals.rs  main.rs  model.rs  op.rs  ops.rs  parser.rs  preprocessor.rs  response.rs  stack.rs  test_utils.rs  utils.rs  value.rs  wast_handler.rs  wast_handler_test.rs
tests/: Readme.md  branch.wat  loop.wat
