[package]
name = "wasmrepl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wasmrepl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.72"
rustyline = "12.0.0"
rustyline-derive = "0.9.0"
wast = "64.0.0"
