[package]
name = "wasmrepl"
version = "0.1.0"
edition = "2021"
description = "A REPL for Web Assembly"
license = "MIT"
keywords = ["wasm"]
homepage = "https://github.com/anoopelias/wasmrepl/"
repository = "https://github.com/anoopelias/wasmrepl/"

[[bin]]
name = "wasmrepl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.72"
rustyline = "12.0.0"
rustyline-derive = "0.9.0"
wast = "65.0.0"
